// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeletedFoo render 1`] = `
<form
  className="dd-form"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
    >
      Name
      <input
        className="dd text-body1"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </label>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
    >
      title
      <input
        className="dd text-body1"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`FullFoo render 1`] = `
<form
  className="dd-form"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
    >
      Name
      <input
        className="dd text-body1"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </label>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
    >
      title
      <input
        className="dd text-body1"
        onChange={[Function]}
        type="text"
        value="Hello"
      />
    </label>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={false}
    type="submit"
    value="Save"
  />
</form>
`;

exports[`NewFoo render 1`] = `
<form
  className="dd-form"
  onSubmit={[Function]}
>
  <div>
    <label
      className="dd text-subtitle1"
    >
      Name
      <input
        className="dd text-body1"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <hr
    className="dd divider"
  />
  <div>
    <label
      className="dd text-subtitle1"
    >
      title
      <input
        className="dd text-body1"
        onChange={[Function]}
        type="text"
        value=""
      />
    </label>
  </div>
  <input
    className="dd button text-button bg-primary"
    disabled={true}
    type="submit"
    value="Save"
  />
</form>
`;
